<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishWalkActivity">

    <EditText
        android:id="@+id/edttxtdestino"
        style="@style/Lime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/destino"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtmensagem"
        style="@style/Lime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_message"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtdestino" />

    <EditText
        android:id="@+id/edttxtinserirpet"
        style="@style/Cyan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_pet_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtmensagem" />

    <Button
        android:id="@+id/btninserirpet"
        style="@style/Purple"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/inserir_pet"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtinserirpet" />

    <Button
        android:id="@+id/btnescolherimagem"
        style="@style/Pink"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_escolher_imagem"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btninserirpet" />

    <Button
        android:id="@+id/btnconcluir"
        style="@style/Yellow"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_cadastrar"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnescolherimagem" />
</androidx.constraintlayout.widget.ConstraintLayout>