<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity">

    <TextView
        android:id="@+id/txtvwbemvindoapp"
        style="@style/Lime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_app"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwtop" />

    <EditText
        android:id="@+id/edttxtnome"
        style="@style/Cyan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwpaw2" />

    <EditText
        android:id="@+id/edttxtcpf"
        style="@style/Pink"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="number"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtemail" />

    <EditText
        android:id="@+id/edttxtpass"
        style="@style/Lime"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtcpf" />

    <Button
        android:id="@+id/btnpick"
        style="@style/Cyan"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_escolher_imagem"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtpass" />

    <Button
        android:id="@+id/btncadastrar"
        style="@style/Purple"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_cadastrar"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpick" />

    <EditText
        android:id="@+id/edttxtemail"
        style="@style/Purple"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtnome" />

    <ImageView
        android:id="@+id/imgvwpaw2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwbemvindoapp"
        app:srcCompat="@drawable/pawcolor" />

    <ImageView
        android:id="@+id/imgvwtop"
        android:layout_width="340dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

</androidx.constraintlayout.widget.ConstraintLayout>