<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnstlaybackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity">

    <ImageView
        android:id="@+id/imgvwlogo"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwwalk"
        app:srcCompat="@drawable/name" />

    <ImageView
        android:id="@+id/imgvwwalk"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwpets"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtvwpets"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/pets_presentes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwdestinofinal" />

    <TextView
        android:id="@+id/txtvwmsg"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mensagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwdatapasseio" />

    <TextView
        android:id="@+id/txtvwdatapasseio"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/data"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvwdestinofinal"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/destino"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwmsg" />
</androidx.constraintlayout.widget.ConstraintLayout>