<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50FA7B"
    tools:context=".DogActivity">

    <TextView
        android:id="@+id/txtvwtextodog"
        style="@style/DefaultStyle"
        android:layout_width="340dp"
        android:layout_height="137dp"
        android:layout_marginTop="20dp"
        android:text="@string/texto_calor_dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwtitulodog" />

    <Button
        android:id="@+id/btnmaisinfodog"
        style="@style/DefaultStyle"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:onClick="direcionarSite"
        android:text="@string/mais_info"
        android:textColor="#50FA7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwtextodog" />

    <TextView
        android:id="@+id/txtvwtitulodog"
        style="@style/DefaultStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_calor_dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgvwhealthdog"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmaisinfodog"
        app:srcCompat="@drawable/health" />
</androidx.constraintlayout.widget.ConstraintLayout>