<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edttxtlogin"
        style="@style/Yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="600px"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwbemvindo" />

    <EditText
        android:id="@+id/edttxtsenha"
        style="@style/Lime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:width="600px"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtlogin" />

    <TextView
        android:id="@+id/txtvwbemvindo"
        style="@style/Orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/bem_vindo"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwnome" />

    <TextView
        android:id="@+id/txtvwmeunome"
        style="@style/Pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/meu_nome"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnnovousuario" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/Cyan"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round"
        android:onClick="showMenu"
        android:text="@string/login"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtsenha" />

    <Button
        android:id="@+id/btnnovousuario"
        style="@style/Purple"
        android:layout_width="300dp"
        android:layout_height="41dp"
        android:background="@drawable/round"
        android:onClick="startNewUserActivity"
        android:text="@string/novo_usuario"
        android:textColor="#F8F8F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <ImageView
        android:id="@+id/imgvwnome"
        android:layout_width="318dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/name" />

    <ImageView
        android:id="@+id/imgvwpaw"
        android:layout_width="87dp"
        android:layout_height="73dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwmeunome"
        app:srcCompat="@drawable/pawcolor" />

</androidx.constraintlayout.widget.ConstraintLayout>